--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "bcryptjs": "^2.4.3",
     "config": "^3.3.6",
     "express": "^4.17.1",
-    "mongoose": "^5.12.8"
+    "mongoose": "^5.12.8",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.7"
   },
   "devDependencies": {},
   "scripts": {
