--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bcryptjs": "^2.4.3",
     "concurrently": "^6.1.0",
     "config": "^3.3.6",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.8",
