--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^5.12.8",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "nexmo": "^2.9.1",
     "nodemon": "^2.0.7"
   },
   "devDependencies": {},
